# mplayer-server

./: About.norg  Cargo.toml  README.md  flake.nix
src/: client.rs  main.rs  server.rs  utils.rs
